--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -22,35 +22,35 @@
               <%= f.label :bank_name, 'Bank Name' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :bank_name %>
+              <%= f.text_field :bank_name, maxlength: 100 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :address, 'Address' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :address %>
+              <%= f.text_field :address, maxlength: 150 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :city, 'City' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :city %>
+              <%= f.text_field :city, maxlength: 50 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :state, 'State/Region' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :state %>
+              <%= f.text_field :state, maxlength: 50 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :zip, 'ZIP/Postal Code' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :zip %>
+              <%= f.text_field :zip, maxlength: 30 %>
             </div>
 
             <div class="col-md-4">
@@ -68,42 +68,42 @@
               <%= f.label :account_name, 'Account Name' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :account_name %>
+              <%= f.text_field :account_name, maxlength: 50 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :account_number, 'Account Number' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :account_number %>
+              <%= f.text_field :account_number, maxlength: 50 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :currency, 'Currency' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :currency %>
+              <%= f.text_field :currency, maxlength: 50 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :routing_number, 'Routing Number' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :routing_number %>
+              <%= f.text_field :routing_number, maxlength: 50 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :bic, 'BIC (Swift Code)' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :bic %>
+              <%= f.text_field :bic, maxlength: 30 %>
             </div>
 
             <div class="col-md-4">
               <%= f.label :iban, 'IBAN' %>
             </div>
             <div class="col-md-8">
-              <%= f.text_field :iban %>
+              <%= f.text_field :iban, maxlength: 30 %>
             </div>
 
             <div class="row remove-both-margin">
