solve profile picture change cancel issues

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1220,8 +1220,7 @@ h5, .h5 {
 .image-upload-btn-container{
   display: inline-block;
   padding-top: 20px;
-  text-align: right;
-  vertical-align: top;
+  padding-left: 10px;
 }
 
 #profile_image_upload_modal .modal-body{
