[Bug Fixed]: Break all in social activity Modal

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -822,3 +822,7 @@ only screen and (max-width: 480px) {
     font-weight: 600;
     padding: 20px 0;
 }
+
+.facebook-feed-content .media-heading {
+    word-break: break-all;
+}
