radio buttons require checked instead of selected

--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -32,7 +32,7 @@
                         <div class="js-clickable fb-activity-row">
 
                          <div class="media-left media-middle fb-activity-radio">
-                            <input type="radio" class="vertical-align-middle" name="activity_id" value="{{id}}" {{#if active}}selected{{/if}}>
+                            <input type="radio" class="vertical-align-middle" name="activity_id" value="{{id}}" {{#if active}}checked{{/if}}>
                          </div>
 
                          <div class="media-left media-middle fb-activity-post">
