--- a/app/views/offers/_offer.erb
+++ b/app/views/offers/_offer.erb
@@ -5,7 +5,8 @@
     </div>
 
     <div class="select-offer squaredFour">
-      <input type="checkbox"  value="1" class="select-offer" data-id="<%=offer.id %>"/>
+      <input type="checkbox"  value="1" class="select-offer <%= offer.engaged? ? 'engage-offer' : '' %>"
+             data-id="<%=offer.id %>"/>
       <label></label>
     </div>
 
@@ -41,15 +42,14 @@
               <span class="text-success">Running Campaign</span>
           <% else %>
               <span class="text-success">Accepted Campaign</span>
-
           <% end %>
       <% else %>
           <% if offer.engaged? %>
               <span class="text-success">Running Campaign</span>
-    <% elsif offer.accepted? %>
-              <%= link_to 'Engage', new_brand_payment_campaigns_path(id: offer.id), class: 'btn btn-accept button-border-blue engage' %>
-    <% elsif offer.deleted_by_influencer? %>
+          <% elsif offer.deleted_by_influencer? %>
               <span class="text-danger">Offer deleted</span>
+          <% elsif offer.accepted? %>
+              <%= link_to 'Engage', new_brand_payment_campaigns_path(id: offer.id), class: 'btn btn-accept button-border-blue engage' %>
           <% elsif offer.denied? %>
               <span class="text-danger">Offer denied</span>
           <% else  %>
