--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -11,7 +11,7 @@
 <div class="header-bottom-margin"></div>
 
 <div class="offer-content">
-  <div class="text-info engage-campaign-delete-info"></div>
+  <div class="text-danger engage-campaign-delete-info text-center"></div>
   <ul class="nav nav-tabs" id="campaign-tabs">
     <li class="pull-right">
       <div class="star-del-ref-panel">
