--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -265,9 +265,10 @@ only screen and (max-width: 415px) {
     }
 
     .payments_table > tbody > tr > td:nth-of-type(2):before { content: "Date Billed : "; font-weight: bold; }
-    .payments_table > tbody > tr > td:nth-of-type(3):before { content: "Transaction ID : ";  font-weight: bold; }
-    .payments_table > tbody > tr > td:nth-of-type(4):before { content: "Amount Billed (INR) : ";  font-weight: bold; }
-    .payments_table > tbody > tr > td:nth-of-type(5):before { content: "Payment Status : ";  font-weight: bold; }
+    .payments_table > tbody > tr > td:nth-of-type(3):before { content: "Date Billed : "; font-weight: bold; }
+    .payments_table > tbody > tr > td:nth-of-type(4):before { content: "Transaction ID : ";  font-weight: bold; }
+    .payments_table > tbody > tr > td:nth-of-type(5):before { content: "Amount Billed (INR) : ";  font-weight: bold; }
+    .payments_table > tbody > tr > td:nth-of-type(6):before { content: "Payment Status : ";  font-weight: bold; }
 
 
     .bank_accounts_table > tbody > tr > td:nth-of-type(1):before { content: "Account Name : "; font-weight: bold; }
