--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -24,6 +24,7 @@
           <thead>
           <tr class="payment-header">
             <th class="squaredFour" id="select_all_brand_payment"><input type="checkbox" class="payment-header" value="all"/></th>
+            <th>Campaign Name</th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
             <th>Amount Billed (INR)</th>
@@ -37,6 +38,7 @@
               <% @transactions.each do |transaction| %>
                   <tr>
                     <td class="squaredFour"><input type="checkbox" class="BrandPaymentCheckBox" data-id="<%= transaction.id %>" value="1"/></td>
+                    <td><%= transaction.campaign.name %></td>
                     <td><%= transaction.billed_date.present? ? transaction.billed_date.strftime('%B %d, %Y') : 'NA' %></td>
                     <td><%= sprintf('BP%05d' ,transaction.id) %></td>
                     <td><%= transaction.amount_billed %></td>
