profile image upload crome issues solved

--- a/app/assets/stylesheets/profile-image-upload.css
+++ b/app/assets/stylesheets/profile-image-upload.css
@@ -9,7 +9,7 @@
 
 .profile-image-modal-header {
     height: auto;
-    padding: 25px 54px;
+    padding: 12px 10px 20px;
     background-color: white;
 }
 
