--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1219,6 +1219,7 @@ h5, .h5 {
 
 .image-upload-btn-container{
   display: inline-block;
+  vertical-align: top;
   padding-top: 20px;
   padding-left: 10px;
 }
