--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -17,12 +17,12 @@
 
                     <div class="js-clickable fb-activity-row-head">
 
-                         <div class="media-left media-middle fb-activity-radio">
+                         <div class="fb-activity-radio">
                          </div>
-                         <div class="media-left media-middle fb-activity-post">
+                         <div class="fb-activity-post">
                             <h4> Activity Name </h4>
                          </div>
-                         <div class="media-right media-middle fb-activity-image">
+                         <div class="fb-activity-image">
                             <h4> Picture </h4>
                          </div>
 
@@ -31,15 +31,15 @@
                     {{#each accounts}}
                         <div class="js-clickable fb-activity-row">
 
-                         <div class="media-left media-middle fb-activity-radio">
+                         <div class="fb-activity-radio">
                             <input type="radio" class="vertical-align-middle" name="activity_id" value="{{id}}" {{#if active}}checked{{/if}}>
                          </div>
 
-                         <div class="media-left media-middle fb-activity-post">
+                         <div class="fb-activity-post">
                             <h4 class="media-heading vertical-align-middle">{{story}}{{message}}</h4>
                          </div>
 
-                         <div class="media-right media-middle fb-activity-image">
+                         <div class="fb-activity-image">
                             {{#if picture}}
                               <img class="media-object fb-activity-img vertical-align-middle" src="{{picture}}">
                             {{/if}}
