--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -20,6 +20,7 @@
                         <div class="js-clickable fb-activity-row-head">
 
                              <div class="fb-activity-radio">
+                                <h4> Choose </h4>
                              </div>
                              <div class="fb-activity-post">
                                 <h4> Activity Name </h4>
