influence rsearch result show issues solve

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -60,7 +60,8 @@
         var regex = new RegExp(searchKey, 'gi');
 
         $offerBody.find('.message').each(function () {
-            $(this).children('.title').html($(this).children('.title').html().replace(regex, replaceWord));
+
+            $(this).children('.message-body').html($(this).children('.message-body').html().replace(regex, replaceWord));
         });
         <% end %>
         <!--need to change proper style sheet -->
