--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -842,7 +842,7 @@ only screen and (max-width: 768px) {
         width: 100%;
         display: block;
         padding: 5px;
-        /*text-align: center;*/
+        text-align: center;
     }
 
     .facebook-content {
@@ -855,13 +855,5 @@ only screen and (max-width: 768px) {
         font-size: 15px;
     }
 
-    .facebook-content .fb-activity-row-head {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
-    }
-
-    .fb-activity-row .fb-activity-radio:before { content: "Choose : "; font-weight: bold; }
-    .fb-activity-row .fb-activity-post:before { content: "Activity Name : "; font-weight: bold; }
-    .fb-activity-row .fb-activity-image:before { content: "Picture : "; font-weight: bold; }
+    .facebook-content .fb-activity-row-head:before { content: "Choose "; font-weight: bold; text-align: center; }
 }
