--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1257,3 +1257,12 @@ h5, .h5 {
   background-color: #f2dede;
   border-color: #ebccd1;
 }
+
+.influencer-search-result-box{
+  padding: 20px;
+}
+
+.influencer-search-result-box p{
+  font-weight: 700;
+  font-size: 16px;
+}
