--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -832,10 +832,12 @@ only screen and (max-width: 480px) {
     word-break: break-all;
 }
 
-.set-facebook-activity {
+.fb-activity-modal-dialog .set-facebook-activity {
     padding: 18px 45px;
     margin: 0;
 }
+
+.opacity-z
 
 @media
 only screen and (max-width: 768px) {
@@ -862,9 +864,5 @@ only screen and (max-width: 768px) {
         padding: 7px;
         margin: 0;
         font-size: 15px;
-    }
-
-    .fb-activity-row-head .fb-activity-radio, .fb-activity-row-head .fb-activity-post, .fb-activity-row-head .fb-activity-image {
-        min-height: 20px;
     }
 }
