--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1266,3 +1266,27 @@ h5, .h5 {
   font-weight: 700;
   font-size: 16px;
 }
+
+
+// profile image crop modal style
+
+#profile_image_edit_modal .modal-dialog{
+  max-width: 500px;
+  height: auto;
+}
+@media (max-width: 767px) {
+  #profile_image_edit_modal .modal-dialog{
+    width: 95%;
+  }
+  #profile_image_edit_modal .modal-body{
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+.image-field{
+  margin-top: 10px;
+}
+#profile_image_edit_modal .modal-footer{
+  padding: 15px 0;
+}
+
