[Bug Fixed]: New Campaign page padding problem fixed

--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -26,10 +26,9 @@
 
       <%= csrf_meta_tag %>
 
-      <div class="col-md-12">
+      <div class="col-md-12 campaign-form-input">
         <div class="social-account-tabs">
-          <ul class="nav nav-tabs social-account-nav-tabs">
-          </ul>
+          <ul class="nav nav-tabs social-account-nav-tabs"></ul>
 
           <div class="tab-content social-account-tab-content">
             <div id="fb_bhanu" class="tab-pane fade in active">
