--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -514,9 +514,12 @@ only screen and (max-width: 460px) {
 
 .text-headline-form input, .text-headline-form textarea {
     width: 66%;
-    margin-top: 10px;
     margin-bottom: 10px;
     padding: 5px;
+}
+
+.campaign-form-input {
+    margin-bottom: 15px;
 }
 
 .text-headline-form textarea {
