--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1258,6 +1258,16 @@ h5, .h5 {
   border-color: #ebccd1;
 }
 
+.test[style] {
+  padding-right:0 !important;
+}
+.popover-title {
+  font-size: 12px;
+  padding: 2px;
+}
+
+}
+
 .influencer-search-result-box{
   padding: 20px;
 }
