FAQ tittle uppercase

--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -1,5 +1,5 @@
 
-<% title 'faqs' %>
+<% title 'FAQs' %>
 
 <div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper faq-container">
   <div class="inner_bg" id="faq">
