profile image crop design issues solved for all size images

--- a/app/views/shared/_profile_image_crop.html.erb
+++ b/app/views/shared/_profile_image_crop.html.erb
@@ -50,9 +50,10 @@
             setSelect: [10, 10, 400, 400]
         }, function () {
             var imageWidth = $('#profile-pic-edit').width();
+            console.log('image edit modal image width ' + imageWidth);
             var modalDialogMaxWidth = 0;
-            if(imageWidth > 260){
-                modalDialogMaxWidth = imageWidth + 100;
+            if((imageWidth + 108) > 260){
+                modalDialogMaxWidth = imageWidth + 108;
             }else{
                 modalDialogMaxWidth = 260;
             }
