--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -284,7 +284,10 @@ only screen and (max-width: 768px) {
 }
 
 .brand-payment-content {
+    margin-bottom: 20px;
     padding: 0 20px;
+    position: relative;
+    z-index: 100;
 }
 
 .brand-payment-content .tab-content {
