[Bug Fix] : Padding changed in withdraw modal body

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -330,7 +330,7 @@ only screen and (max-width: 768px) {
     font-weight: 100;
 }
 
-.withdraw-modal-body {
+.withdraw-modal-dialog .withdraw-modal-body {
     padding: 25px 20px;
 }
 
