--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -75,7 +75,7 @@
 }
 
 @media
-only screen and (max-width: 768px) {
+only screen and (max-width: 1000px) {
     .amount-withdraw label, .amount-withdraw input {
         display: block;
     }
@@ -301,10 +301,19 @@ only screen and (max-width: 768px) {
     width: 40%;
 }
 
+
 @media
-only screen and (max-width: 768px) {
+only screen and (max-width: 1140px) {
     .withdraw-modal-dialog {
-        width: 95%;
+        width: 50%;
+    }
+
+}
+
+@media
+only screen and (max-width: 1000px) {
+    .withdraw-modal-dialog {
+        width: 100%;
     }
 
     .brand-payment-content {
