[Bug Fix] : Withdraw modal Upper padding removed

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -297,7 +297,7 @@ only screen and (max-width: 768px) {
 }
 
 .withdraw-modal-dialog {
-    padding: 100px 0;
+    padding: 0;
     width: 40%;
 }
 
