--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -19,7 +19,7 @@
           <div class="row">
             <div class="col-md-12">
               <label for="category"> Category </label>
-              <%= select_tag :category, options_for_select(category_list), {id: 'explore-category', prompt: 'Select a Category'} %>
+              <%= select_tag :category, options_for_select(categories_list), {id: 'explore-category', prompt: 'Select a Category'} %>
             </div>
 
             <div class="col-md-12">
