--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -112,7 +112,7 @@
               </div>
               <div class="col-md-8">
 
-                <%= f.button 'CANCEL', :type => :reset, class: 'btn btn-close', "data-dismiss" => "modal", "aria-hidden" => "true" %>
+                <%= submit_tag 'CANCEL', :type => :reset, class: 'btn btn-close', "data-dismiss" => "modal", "aria-hidden" => "true" %>
               </div>
             </div>
 
