[Bug Fix] : Space Removed from Bank account Modal

--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -111,8 +111,7 @@
                 <%= f.button  'SAVE', class: 'btn btn-withdraw btn-save-account' %>
               </div>
               <div class="col-md-8">
-                <%= link_to 'CANCEL', '', class: 'btn btn-close', "data-dismiss" => "modal", "aria-hidden" => "true" %>
-
+                <%= link_to 'CANCEL', '', class: 'btn btn-close', 'data-dismiss' => 'modal', 'aria-hidden' => 'true' %>
               </div>
             </div>
 
