--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -322,9 +322,13 @@ only screen and (max-width: 1000px) {
 }
 
 @media
-only screen and (min-width:769px) and (max-width: 990px) {
+only screen and (min-width:769px) and (max-width: 1000px) {
     .withdraw-modal-dialog {
         width: 50%;
+    }
+    .bank-account-modal label, .bank-account-modal input, .bank-account-modal select {
+        float: left;
+
     }
 }
 
