[Bug Fix] : Sign Up Modal and Sign in Modal position Lowered

--- a/app/assets/stylesheets/influencers_home.scss
+++ b/app/assets/stylesheets/influencers_home.scss
@@ -43,6 +43,14 @@
   margin-bottom: 15px;
 }
 
+.modal-dialog-sign-up {
+  padding-top: 2%;
+}
+
+.modal-dialog-sign-in {
+  padding-top: 4%;
+}
+
 .social-accounts-logo a {
   background-color: #e6e6e6;
   color: #3a3a3a;
