--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -2,7 +2,7 @@
 
 <div aria-hidden="false" class="modal fade in" id="signin">
   <div class="modal-backdrop fade in"></div>
-  <div class="modal-dialog modal-md">
+  <div class="modal-dialog modal-md modal-dialog-sign-in">
     <div class="modal-content">
       <div class="modal-header close-image">
         <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
