display active brands and influencers  requested brands, profile info  -add authorization for admin access  - admin remove functionality

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1300,3 +1300,8 @@ h5, .h5 {
 #profile_image_edit_modal .jcrop-holder{
   margin: auto;
 }
+
+.admin-sign-in-container{
+  max-width: 500px;
+  margin: 20% auto 0;
+}
