add logic for both activate/deactivate user to user partial confirm dialog before admin remove both active deactive user functionality

--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -3,6 +3,14 @@
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
   <td>
-    <a href="<%= user %>" class="text-red  text-danger"><h5>DEACTIVATE</h5></a>
+    <% if user.verified? %>
+        <a href="javascript:;" class="text-red  text-danger deactivate-user">
+          <h5>DEACTIVATE</h5>
+        </a>
+    <% else %>
+        <a href="javascript:;" class="text-red  text-danger activate-user">
+          <h5>DEACTIVATE</h5>
+        </a>
+    <% end %>
   </td>
 </tr>
