--- a/app/views/admin/admins/_admin.html.erb
+++ b/app/views/admin/admins/_admin.html.erb
@@ -3,6 +3,8 @@
   <td><%= admin.last_name %></td>
   <td><%= admin.email %></td>
   <td>
-    <a href="<%= admin_admin_path(admin) %>" data-remote="true" class="text-red  text-danger"><h5>Remove</h5></a>
+    <a href="javascript:;" class="text-red  text-danger remove-admin" data-id="<%= admin.id %>">
+      <h5>Remove</h5>
+    </a>
   </td>
 </tr>
